refactor(institutov2): Refactored to different userDto for login, register and other